<?xml version="1.0"?>
<package>
  <name>fiducials</name>
  <version>1.0.0</version>
  <description>The fiducials package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="wayne@gramlich.net">Wayne Gramlich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="wayne@gramlich.net">Wayne Gramlich</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>OpenCV</build_depend>
  <build_depend>fiducials_rviz</build_depend>

  <run_depend>OpenCV</run_depend>
  <run_depend>fiducials_rviz</run_depend>

</package>
