<?xml version="1.0"?>
<package>
  <name>fiducials</name>
  <version>1.0.0</version>
  <description>The fiducials package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="wayne@gramlich.net">Wayne Gramlich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="wayne@gramlich.net">Wayne Gramlich</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>opencv2</build_depend>
  <build_depend>angles</build_depend>

  <run_depend>opencv2</run_depend>
  <run_depend>angles</run_depend>

</package>
