<?xml version="1.0"?>
<package format="2">
  <name>fiducials</name>
  <version>0.12.0</version>
  <description>Localization using fiducial markers</description>

  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fiducials</url> 

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>aruco_detect</exec_depend>
  <exec_depend>fiducial_slam</exec_depend>
  <exec_depend>fiducial_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
