<?xml version="1.0"?>
<package format="2">
  <name>stag_detect</name>
  <version>0.11.0</version>
  <description>Fiducial detection based on the stag library</description>

  <maintainer email="tp@ubiquityrobotics.org">Teodor Janez Podobnik</maintainer>
  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>fiducial_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>python3-cairosvg</depend>
  <depend>camera_info_manager</depend>

</package>
